--- a/docs/benchmarks/bernstein-vazirani.ipynb
+++ b/docs/benchmarks/bernstein-vazirani.ipynb
@@ -16,7 +16,20 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt \n",
-    "from equal1.benchmarking.algorithms import deutschjozsa "
+    "from equal1.benchmarking.algorithms import deutschjozsa \n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b8ad53e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hardware = {'hpc-conservative':\"Current Device extrapolated\", 'hpc-gamma1': \"32 Qubit QPU\", 'hpc-gamma2': \"167 Qubit QPU\"}"
    ]
   },
   {
@@ -26,12 +39,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bv_experiment = deutschjozsa.BernsteinVazirani(\n",
-    "    5,\n",
-    "    device_name=\"bell1-6\",\n",
-    "    strings_to_test=[\"11010\", \"00110\"],\n",
-    "    runtime_options={\"simulation_platform\": \"CPU\"},\n",
-    ")"
+    "all_experiments = [deutschjozsa.BernsteinVazirani(n_qubits=n_q, device_name=hw, number_of_random_strings_to_test = min(2**n_q, 10), rng=7331) for n_q in range(3, 21, 2) for hw in hardware.keys()]\n",
+    "results = []\n",
+    "for individual in all_experiments:\n",
+    "    individual.run(simulate=True,  runtime_options={\"backend\":\"TensorNet_MPS\", \"simulation_platform\":\"GPU\"})\n",
+    "    individual.collect_results()\n",
+    "    anal = individual.analyse_results()\n",
+    "    # print(anal)\n",
+    "    for state, value in anal.items():\n",
+    "        row = {\"n_qubits\": individual.n_qubits, \"device\": individual.device_name, \"state\": int(state,2), \"probability\": value}\n",
+    "        results.append(row)\n",
+    "    print(f\"Running for {individual.n_qubits} qubits {individual.device_name}, results: {anal}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67cba550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame.from_dict(results)\n",
+    "df.to_csv(\"bernstein_vazirani.csv\")"
    ]
   },
   {
@@ -41,45 +71,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bv_experiment.circuits[1].draw(\"mpl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "419acfb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bv_experiment.run(simulate=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b853d14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bv_experiment.analyse_results()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a42f5566",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(1, 2, figsize=(10, 5), constrained_layout=True)\n",
-    "bv_experiment.plot_graph(ax[0], bv_experiment.hidden_strings[0])\n",
-    "bv_experiment.plot_graph(ax[1], bv_experiment.hidden_strings[1])\n"
+    "fig, ax = plt.subplots(figsize=(6,6))\n",
+    "df[\"label\"] = df[\"device\"].map(hardware)\n",
+    "sns.lineplot(data=df, x=\"n_qubits\", y=\"probability\", hue=\"label\", ax=ax)\n",
+    "ax.set_ylim(0, 1)\n",
+    "ax.grid(True)\n",
+    "ax.set_ylabel(\"Probability of measuring the hidden string\")\n",
+    "ax.set_xlabel(\"Number of Qubits\")\n",
+    "ax.legend(title=\"Simulated Devices\")\n",
+    "ax.set_title(\"Bernstein-Vazirani Problem Performance\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6be4cb61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da3191a0",
    "metadata": {},
    "outputs": [],
    "source": []
