--- a/docs/benchmarks/ghz_states.ipynb
+++ b/docs/benchmarks/ghz_states.ipynb
@@ -42,6 +42,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4e9c2ec",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "797827e0",
@@ -52,14 +58,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf5eae90",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8ca69894",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#all_experiments = [GHZStateIndividual(n_qubits=q, device_name=\"bell2-17-gen-preview\") for q in range(2, 7, 2)]\n",
+    "# all_experiments = [GHZStateIndividual(n_qubits=q, device_name=\"bell2-17-gen-preview\") for q in range(2, 9, 2)]\n",
     "all_experiments = [GHZStateIndividual(n_qubits=q, device_name=device_name) for q in range(2, 17, 2) for device_name in hardware.keys()]\n",
+    "# all_experiments = [GHZStateIndividual(n_qubits=q, device_name=device_name) for q in range(2, 9, 2) for device_name in hardware.keys()]\n",
     "results  = []\n",
     "for individual in all_experiments:\n",
     "    individual.run(simulate=True,  runtime_options={\"backend\":\"TensorNet_MPS\", \"simulation_platform\":\"GPU\"})\n",
@@ -96,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f58ab18c",
+   "id": "67f5f601",
    "metadata": {},
    "outputs": [],
    "source": []
