Separated results by device

--- a/docs/benchmarks/t1_t2_time.ipynb
+++ b/docs/benchmarks/t1_t2_time.ipynb
@@ -108,7 +108,11 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(results)\n",
-    "df.to_csv(\"t1_t2_results.csv\", index=False)"
+    "\n",
+    "device_groups = {device: group for device, group in df.groupby(\"device\")}\n",
+    "\n",
+    "for device, group in device_groups.items():\n",
+    "    group.to_csv(f\"t1_t2_results_{device}.csv\", index=False)"
    ]
   },
   {
@@ -118,12 +122,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(24, 6))\n",
-    "sns.barplot(data=df, x=\"qubit_idx\", y=\"t1\", hue=\"device\", ax=ax)\n",
-    "ax.set_title(\"T1 Time by Qubit and Device\")\n",
-    "ax.set_ylabel(\"T1 Time (s)\")\n",
-    "ax.set_xlabel(\"Qubit Index\")\n",
-    "ax.legend(title=\"Device\")"
+    "for device, group in device_groups.items():\n",
+    "    fig, ax = plt.subplots(figsize=(24, 6))\n",
+    "    sns.barplot(data=group, x=\"qubit_idx\", y=\"t1\", ax=ax)\n",
+    "    ax.set_title(f\"T1 Time by Qubit - {device}\")\n",
+    "    ax.set_ylabel(\"T1 Time (s)\")\n",
+    "    ax.set_xlabel(\"Qubit Index\")"
    ]
   },
   {
@@ -133,12 +137,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(24, 6))\n",
-    "sns.barplot(data=df, x=\"qubit_idx\", y=\"t2\", hue=\"device\", ax=ax)\n",
-    "ax.set_title(\"T2 Time by Qubit and Device\")\n",
-    "ax.set_ylabel(\"T2 Time (s)\")\n",
-    "ax.set_xlabel(\"Qubit Index\")\n",
-    "ax.legend(title=\"Device\")"
+    "for device, group in device_groups.items():\n",
+    "    fig, ax = plt.subplots(figsize=(24, 6))\n",
+    "    sns.barplot(data=group, x=\"qubit_idx\", y=\"t2\", ax=ax)\n",
+    "    ax.set_title(f\"T2 Time by Qubit - {device}\")\n",
+    "    ax.set_ylabel(\"T2 Time (s)\")\n",
+    "    ax.set_xlabel(\"Qubit Index\")"
    ]
   }
  ],
